--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="my-foot" >
 				©2023 打工人的日常生活.
 				<br/>
-				豫ICP备2021021398号-1
+				<a href="https://www.unfbx.com" target="_blank"> | UNFBX</a>
 			</div>
 		</div>
 
