--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>大厂技术博文汇总平台</title>
 		<link href="./css/bootstrap.css" rel="stylesheet">
 		<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+		<link rel="icon" href="./img/favicon.ico">
 		<link
 		    rel="stylesheet"
 		    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
