--- a/index.html
+++ b/index.html
@@ -21,17 +21,25 @@
 			<div class="border border-1 border-dark sticky-top my-title">
 				大厂技术博文汇总平台
 			</div>
+			<div class="center-space">
+				<div class="center-space-left">
+				</div>
+				<div>
+					<table id="tb" class="table table-bordered border-dark border-2 table-hover table-my-style">
+					
+						<tbody>
+							<!-- <tr>
+								<th class="table-warning table-bordered border-dark">滴滴技术</th>
+								<td class="table-success table-bordered border-dark">Jgsu1228</td>
+								<td class="table-success table-bordered border-dark">Jgsu1228</td>
+							</tr> -->
+						</tbody>
+					</table>
+				</div>
+				<div class="center-space-right">
+				</div>
+			</div>
 
-			<table id="tb" class="table table-bordered border-dark border-2 table-hover table-my-style">
-			
-				<tbody>
-					<!-- <tr>
-						<th class="table-warning table-bordered border-dark">滴滴技术</th>
-						<td class="table-success table-bordered border-dark">Jgsu1228</td>
-						<td class="table-success table-bordered border-dark">Jgsu1228</td>
-					</tr> -->
-				</tbody>
-			</table>
 			<div class="my-page" >
 				<label>共</label>
 				<label id="countNum">1</label>
@@ -128,6 +136,10 @@
 			  flex-direction: column;
 			  align-items: center;
 			  justify-content: center;
+		}
+		.center-space{
+			display: flex;
+			flex-direction: row;
 		}
 		.table-my-style {
 			width: auto;
